dist/1.0/bin/sample/retrieveUnpackaged/objects/GTS_Code__c.object
<CustomObject>
    <description>Configuration of GTS Codes</description>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <description>Attribute, that value of GTS Code depends on</description>
        <inlineHelpText>Attribute, that value of GTS Code depends on</inlineHelpText>
        <label>Attribute Name</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>GTS Codes</relationshipLabel>
        <relationshipName>GTS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <description>Value of Attribute (selected in Attribute Name) for which this GTS Code should be used</description>
        <inlineHelpText>Value of Attribute (selected in Attribute Name) for which this GTS Code should be used</inlineHelpText>
        <label>Attribute Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Bundle, for which this GTS Code should be used</description>
        <inlineHelpText>Bundle, for which this GTS Code should be used</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>GTS Codes</relationshipLabel>
        <relationshipName>GTS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Component, for which this GTS Code should be used</description>
        <inlineHelpText>Component, for which this GTS Code should be used</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>GTS Codes</relationshipLabel>
        <relationshipName>GTS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location for which this GTS Code should be used</description>
        <inlineHelpText>GTS Location for which this GTS Code should be used</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generic_Product__c</fullName>
        <description>Generic Product, that value of GTS Code depends on</description>
        <inlineHelpText>Generic Product, that value of GTS Code depends on (code will be assigned only if GP was selected)</inlineHelpText>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>GTS Codes</relationshipLabel>
        <relationshipName>GTS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Sales Type (Retail / Wholesale) for which this GTS Code should be used</description>
        <inlineHelpText>Sales Type (Retail / Wholesale) for which this GTS Code should be used</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence of GTS Code assignment (first one accepted will be assigned)</description>
        <inlineHelpText>Sequence of GTS Code assignment (first one accepted will be assigned)</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GTS Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Value__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>GTS_Location__c</columns>
        <columns>Component__c</columns>
        <columns>Bundle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Slovakia</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GTS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTS Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>